feat: address draft review comments
added versioning

cleaned up some legacy design tables

Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/docs_src/assets/stylesheets/extra.css
+++ b/docs_src/assets/stylesheets/extra.css
@@ -1,9 +1,12 @@
 .home-nav-column {
   float: left;
-  width: 23%;
+  width: 30%;
   padding: 0 10px;
   border-top: 5px solid hsla(282,65%,19%,1);
   margin: 5px 5px;
+}
+.home-nav-card {
+  text-align: center;
 }
 
 .home-nav-row {
